Working on features functionality

--- a/layouts/partials/feature.html
+++ b/layouts/partials/feature.html
@@ -1,6 +1,6 @@
 {{ "<!-- Feature Modals -->" | safeHTML }}
 {{ range .Site.Data.features }}
-  <div class="portfolio-modal modal fade" id="portfolioModal{{ .modalID }}" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="feature-modal modal fade" id="featureModal{{ .modalID }}" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-content">
       <div class="close-modal" data-dismiss="modal">
         <div class="lr">
@@ -14,7 +14,7 @@
             <div class="modal-body">
               <h2>{{ .title  | markdownify }}</h2>
               <p class="item-intro text-muted">{{ .subtitle | markdownify }}</p>
-              {{ $url := printf "img/features/%s" .img }}
+              {{ $url := printf "images/features/%s" .img }}
               <img class="img-responsive img-centered" src="{{ $url | absURL }}" alt="">
               <p>{{ .description | markdownify }}</p>
               <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> {{ with $.Site.Params.feature.modal.buttonText }}{{ . }}{{ end }}</button>
