--- a/layouts/partials/features.html
+++ b/layouts/partials/features.html
@@ -1,5 +1,5 @@
 {{ "<!-- Features Grid Section -->" | safeHTML }}
-<section id="portfolio" class="bg-light-gray">
+<section id="features" class="bg-light-gray">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -10,17 +10,17 @@
     <div class="row">
 
       {{ range .Site.Data.features }}
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a href="#portfolioModal{{ .modalID }}" class="portfolio-link" data-toggle="modal">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
+        <div class="col-md-4 col-sm-6 feature-item">
+          <a href="#featureModal{{ .modalID }}" class="feature-link" data-toggle="modal">
+            <div class="feature-hover">
+              <div class="feature-hover-content">
                 <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
-            {{ $url := printf "img/portfolio/%s" .preview }}
+            {{ $url := printf "images/features/%s" .preview }}
             <img src="{{ $url | absURL }}" class="img-responsive" alt="">
           </a>
-          <div class="portfolio-caption">
+          <div class="feature-caption">
             <h4>{{ .title | markdownify }}</h4>
           </div>
         </div>
