--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -10,41 +10,48 @@
     <div class="row flexbox{{ if .Site.Params.team.center }} flexbox-center{{ end }}">
       {{ range .Site.Params.team.members }}
         <div class="col-sm-4 col">
-          <div class="team-member">
-            {{ $url := printf "img/team/%s" .img }}
-            <img src="{{ $url | absURL }}" class="img-responsive img-circle" alt="{{ .name }}">
-            <h3>{{ .name | markdownify }}</h3>
+              <div class="team-member">
+                  <a href="#teambioModal{{ .modalID }}" class="teambio-link" data-toggle="modal">
+                    <div class="teambio-hover">
+                      <div class="teambio-hover-content">
+                        <i class="fa fa-plus fa-3x"></i>
+                      </div>
+                    </div>
+                    {{ $url := printf "images/team/%s" .img }}
+                    <img src="{{ $url | absURL }}" class="img-responsive img-circle img-team-member" alt="{{ .name }}">
+                </a>
+                <h3>{{ .name | markdownify }}</h3>
 
-            {{ with .position }}
-            <h4>{{ . | markdownify }}</h4>
-            {{ end }}
-            {{ with .reportsTo }}
-            <h5 class="report">Reports to {{ . | markdownify }}</h5>
-            {{ end }}
+                {{ with .position }}
+                <h4>{{ . | markdownify }}</h4>
+                {{ end }}
+                {{ with .reportsTo }}
+                <h5 class="report">Reports to {{ . | markdownify }}</h5>
+                {{ end }}
 
-            {{ with .livesIn }}
-            <h5>Lives in {{ . | markdownify }}</h5>
-            {{ end }}
+                {{ with .livesIn }}
+                <h5>Lives in {{ . | markdownify }}</h5>
+                {{ end }}
 
-            {{ with .scope }}
-            <ul>
-              {{ range . }}
-                <li>{{ . | markdownify }}</li>
-              {{ end }}
-            </ul>
-            {{ end }}
+                {{ with .scope }}
+                <ul>
+                  {{ range . }}
+                    <li>{{ . | markdownify }}</li>
+                  {{ end }}
+                </ul>
+                {{ end }}
 
-            <ul class="list-inline social-buttons">
-              {{ range .social }}
-                <li><a href="{{ index . 1 }}"><i class="fa {{ index . 0 }}"></i></a></li>
-              {{ end }}
-            </ul>
+                <ul class="list-inline social-buttons">
+                  {{ range .social }}
+                    <li><a href="{{ index . 1 }}"><i class="fa {{ index . 0 }}"></i></a></li>
+                  {{ end }}
+                </ul>
 
-            {{ with .bio }}
-            <p class="team-bio">{{ . | markdownify }}</p>
-            {{ end }}
+                {{ with .shortbio }}
+                <p class="team-bio">{{ . | markdownify }}</p>
+                {{ end }}
 
-          </div>
+              </div>
         </div>
       {{ end }}
     </div>
