Adding support for extended for of team bio

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,6 +25,7 @@
 
     {{ if .Site.Params.team.enable }}
       {{ partial "team.html" . }}
+      {{ partial "teambio.html" . }}
     {{ end }}
 
     {{ if .Site.Params.clients_list.enable }}
