--- a/layouts/partials/features.html
+++ b/layouts/partials/features.html
@@ -7,7 +7,7 @@
         <h3 class="section-subheading text-muted">{{ with .Site.Params.features.subtitle }}{{ . | markdownify }}{{ end }}</h3>
       </div>
     </div>
-    <div class="row">
+    <div class="row flexbox">
 
       {{ range .Site.Data.features }}
         <div class="col-md-4 col-sm-6 feature-item">
